added background color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
         <!--Internal Styles-->
         <style>
-
+            body {
+                background-color:rgb(188, 212, 233);
+            }
         </style>
     </head>
     <body>
