added borders to my image, map, and cse building

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 style="color:mediumvioletred">Anoushka Dave</h1>
 
             <picture>
-                <img src="images/Anoushka_Dave.jpg" alt="" width="250" height="250"/>
+                <img src="images/Anoushka_Dave.jpg" id="anoushka-image" alt="" width="250" height="250"/>
             </picture>
             <svg><circle cx="10" cy="10" r="4"></circle></svg>
             <br>
@@ -45,7 +45,7 @@
                 </video>
 
                 <p>Here is where UC San Diego is located:</p>
-                <iframe id="inlineFrame"
+                <iframe id="ucsd-map"
                     title="Inline Frame - UCSD Location"
                     width="300"
                     height="200"
@@ -370,7 +370,7 @@
                 <figcaption class="dark-pink-text-color">University of California, San Diego - Jacobs School of Engineering</figcaption>
             </figure>
             <figure>
-                <img src="images/ucsd_cse_bear.jpg" alt="Bear" width="480" height="270">
+                <img src="images/ucsd_cse_bear.jpg" id="ucsd-cse" alt="Bear" width="480" height="270">
                 <figcaption class="dark-pink-text-color">Bear at UCSD CSE</figcaption>
             </figure>
         </footer>
