added Roboto font

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
         <!--External Style Sheet-->
         <link href="styles.css" rel="stylesheet">
 
+        <!--Font: Roboto-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
         <!--Internal Styles-->
         <style>
             body {
                 background-color:rgb(188, 212, 233);
+                font-family: 'Roboto', sans-serif;
             }
         </style>
     </head>
@@ -84,9 +89,9 @@
                     <h3>Bachelor's of Science, Computer Science</h3>
                     <h4>Minor in Theatre</h4>
                     <div>
-                        <b><i style="color:hsl(350, 100%, 87.6%)">University of California, San Diego, GPA: 4.00</i></b>
+                        <b><i style="color:hsl(350, 76%, 26%)">University of California, San Diego, GPA: 4.00</i></b>
                         <br>
-                        <i style="color:hsl(350, 100%, 87.6%)">September 2019 - Anticipated June 2023</i>
+                        <i style="color:hsl(350, 76%, 26%)">September 2019 - Anticipated June 2023</i>
                     </div>
                     <div>
                         <ul>
@@ -229,8 +234,8 @@
                 <div>
                     <h3>High School Diploma</h3>
                     <div>
-                        <b><i style="color:hsl(350, 100%, 87.6%)">University Preparatory Academy, GPA: 4.00</i></b><br>
-                        <i style="color:hsl(350, 100%, 87.6%)">August 2015 - June 2019</i>
+                        <b><i style="color:hsl(350, 76%, 26%)">University Preparatory Academy, GPA: 4.00</i></b><br>
+                        <i style="color:hsl(350, 76%, 26%)">August 2015 - June 2019</i>
                         <ul>
                             <li>9 Advanced Placement Courses</li>
                         </ul>
