added media query

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                 background-color:rgb(188, 212, 233);
                 font-family: 'Roboto', sans-serif;
             }
+            @media only screen and (max-width: 1000px) {
+                .bear-image {
+                    display: none;
+                }
+            }
         </style>
     </head>
     <body>
@@ -375,7 +380,7 @@
                 <figcaption class="dark-pink-text-color">University of California, San Diego - Jacobs School of Engineering</figcaption>
             </figure>
             <figure>
-                <img src="images/ucsd_cse_bear.jpg" id="ucsd-cse" alt="Bear" width="480" height="270">
+                <img src="images/ucsd_cse_bear.jpg" class="bear-image" id="ucsd-cse" alt="Bear" width="480" height="270">
                 <figcaption class="dark-pink-text-color">Bear at UCSD CSE</figcaption>
             </figure>
         </footer>
