--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <body>
         <!--Introduction-->
         <header>
-            <h1 style="color:mediumvioletred">Anoushka Dave</h1>
+            <h1>Anoushka Dave</h1>
 
             <picture>
                 <img src="images/Anoushka_Dave.jpg" id="anoushka-image" alt="" width="250" height="250"/>
