added link hover & active

--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
                 <blockquote>"You never lose, you either win or you learn."</blockquote>
 
                 <p>I would love to connect and share my full resume with you! 
-                    To get to know me better, visit my <span><a href="https://www.linkedin.com/in/anoushka-dave/" target="_blank">LinkedIn</a></span> or <span><a href="mailto:adave@ucsd.edu" target="_blank">email me</a></span>! 
-                    Check out all of my projects by visiting my <span><a href="https://github.com/anoushkadave" target="_blank">GitHub</a></span>! 
-                    You can also contact me through my personal website by providing your information <a href="#contact-me">here</a>!
+                    To get to know me better, visit my <span><a class="link" href="https://www.linkedin.com/in/anoushka-dave/" target="_blank">LinkedIn</a></span> or <span><a class="link" href="mailto:adave@ucsd.edu" target="_blank">email me</a></span>! 
+                    Check out all of my projects by visiting my <span><a class="link" href="https://github.com/anoushkadave" target="_blank">GitHub</a></span>! 
+                    You can also contact me through my personal website by providing your information <a class="link" href="#contact-me">here</a>!
                     I look forward to speaking with you 😄!</p>
             </div>
 
             <p>The following sections describe my experiences in more detail:</p>
             <nav>
                 <ul>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#programming-skills">Programming Skills</a></li>
-                    <li><a href="#languages">Languages</a></li>
+                    <li><a class="link" href="#education">Education</a></li>
+                    <li><a class="link" href="#programming-skills">Programming Skills</a></li>
+                    <li><a class="link" href="#languages">Languages</a></li>
                 </ul>
             </nav>
             <hr>
