added all absolute units

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
                 <div>
                     <details>
-                        <summary class="dark-pink-text-color">Proficient</summary>
+                        <summary class="dark-pink-text">Proficient</summary>
                         <ul>
                             <li>Java, C, C++, Python, JavaScript, TypeScript</li>
                             <li>HTML, CSS</li>
@@ -269,7 +269,7 @@
                 </div>
                 <div>
                     <details>
-                        <summary class="dark-pink-text-color">Familiar</summary>
+                        <summary class="dark-pink-text">Familiar</summary>
                         <ul>
                             <li>macOS, Windows, Linux</li>
                             <li>Node.js, Express</li>
@@ -299,19 +299,19 @@
             <!--Contact Me-->
             <h2 id="contact-me">Contact me here!</h2>
             <form>
-                <label class="pink-text-color">Enter your name: </label>
+                <label class="pink-text">Enter your name: </label>
                 <input type="text">
                 <br>
-                <label class="pink-text-color">What is the date today?</label>
+                <label class="pink-text">What is the date today?</label>
                 <input type="date">
                 <br>
-                <label class="pink-text-color">Enter your email address: </label>
+                <label class="pink-text">Enter your email address: </label>
                 <input type="email">
                 <br>
-                <label class="pink-text-color">Enter your phone number: </label>
+                <label class="pink-text">Enter your phone number: </label>
                 <input type="text">
                 <br>
-                <label class="pink-text-color">What is the best way to reach you?</label>
+                <label class="pink-text">What is the best way to reach you?</label>
                 <select>
                     <optgroup label="Contact-Form">
                         <option>Email</option>
@@ -319,25 +319,25 @@
                     </optgroup>
                 </select>
                 <br>
-                <label class="pink-text-color">How many days of notice should I provide before contacting you?</label>
+                <label class="pink-text">How many days of notice should I provide before contacting you?</label>
                 <input type="number">
                 <br>
                 <fieldset>
-                    <legend class="pink-text-color">Choose your profession:</legend>
+                    <legend class="pink-text">Choose your profession:</legend>
                     <input type="radio">
-                    <label class="pink-text-color">Student</label><br/>
+                    <label class="pink-text">Student</label><br/>
                     <input type="radio">
-                    <label class="pink-text-color">UCSD Faculty</label><br/>
+                    <label class="pink-text">UCSD Faculty</label><br/>
                     <input type="radio">
-                    <label class="pink-text-color">Recruiter</label><br/>
+                    <label class="pink-text">Recruiter</label><br/>
                     <input type="radio">
-                    <label class="pink-text-color">Other</label><br/>
+                    <label class="pink-text">Other</label><br/>
                 </fieldset>
                 <br>
-                <labe class="pink-text-color"l>Please provide any other information I need: </label>
+                <labe class="pink-text"l>Please provide any other information I need: </label>
                 <input type="file">
                 <br>
-                <textarea class="medium-pink-text-color">Leave me a personalized note here!</textarea>
+                <textarea class="medium-pink-text">Leave me a personalized note here!</textarea>
                 <br>
                 <br>
                 <input type="reset" value="Reset your information">
@@ -347,7 +347,7 @@
             <hr>
             <!--Fun Questions-->
             <h3>Here are some fun questions for you!</h3>
-            <label class="pink-text-color" for="myWebsite">What is your favorite part of my personal website?</label>
+            <label class="pink-text" for="myWebsite">What is your favorite part of my personal website?</label>
             <input list="website-choices" id="myWebsite" name="myWebsite" />
             <datalist id="website-choices">
             <option value="Introduction">
@@ -357,13 +357,13 @@
             <option value="Pictures">
             </datalist>
             <br>
-            <label class="pink-text-color">What is your favorite color?</label>
+            <label class="pink-text">What is your favorite color?</label>
             <input type="color">
             <br>
-            <label class="pink-text-color">How excited are you to get to know me?</label>
+            <label class="pink-text">How excited are you to get to know me?</label>
             <input type="range">
             <br>
-            <label class="pink-text-color">Share your personal website with me!</label>
+            <label class="pink-text">Share your personal website with me!</label>
             <input type="url">
             <br>
             <p>Thanks for visiting my website! This is how I feel about you being here: </p>
@@ -378,11 +378,11 @@
         <footer>
             <figure>
                 <img src="images/ucsd_jacobs_logo.png" alt="Logo" width="342" height="80">
-                <figcaption class="dark-pink-text-color">University of California, San Diego - Jacobs School of Engineering</figcaption>
+                <figcaption class="dark-pink-text">University of California, San Diego - Jacobs School of Engineering</figcaption>
             </figure>
             <figure>
                 <img src="images/ucsd_cse_bear.jpg" class="bear-image" id="ucsd-cse" alt="Bear" width="480" height="270">
-                <figcaption class="dark-pink-text-color">Bear at UCSD CSE</figcaption>
+                <figcaption class="dark-pink-text">Bear at UCSD CSE</figcaption>
             </figure>
         </footer>
     </body>
