grid for ap courses

--- a/index.html
+++ b/index.html
@@ -245,6 +245,27 @@
                         <ul>
                             <li>9 Advanced Placement Courses</li>
                         </ul>
+                        <br>
+                        <div class="grid">
+                            <div class="cell">Mathematics & Logic</div>
+                            <div class="cell">AP Computer Science</div>
+                            <div class="cell">Mathematics & Logic</div>
+                            <div class="cell">AP Calculus AB</div>
+                            <div class="cell">Mathematics & Logic</div>
+                            <div class="cell">AP Calculus BC</div>
+                            <div class="cell">Science</div>
+                            <div class="cell">AP Chemistry</div>
+                            <div class="cell">Science</div>
+                            <div class="cell">AP Biology</div>
+                            <div class="cell">Science</div>
+                            <div class="cell">AP Psychology</div>
+                            <div class="cell">History & Govt</div>
+                            <div class="cell">AP US History</div>
+                            <div class="cell">History & Govt</div>
+                            <div class="cell">AP Government</div>
+                            <div class="cell">English</div>
+                            <div class="cell">AP Language</div>
+                        </div>
                     </div>
                 </div>
             </section>
