completed box model

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     Outside of classes, I actively participate in <em>student organizations</em> and love <em>theatre</em>!
                     Dogs are my favorite animal!</p>
 
-                <video controls width="350">
+                <video id="puppy-video" controls width="350">
                     <source src="https://anoushkadave.github.io/cse110-lab2/media/dog_video.mp4" type="video/mp4">      
                         Your browser does not support the video tag.
                 </video>
@@ -393,15 +393,15 @@
             </audio>
             <br>
             <br>
-            <button>Press me if you liked my website!</button>
+            <button id="press-me">Press me if you liked my website!</button>
             <hr>
         </main>
         <footer>
-            <figure>
+            <figure class="image-pad">
                 <img src="images/ucsd_jacobs_logo.png" alt="Logo" width="342" height="80">
                 <figcaption class="dark-pink-text">University of California, San Diego - Jacobs School of Engineering</figcaption>
             </figure>
-            <figure>
+            <figure class="image-pad">
                 <img src="images/ucsd_cse_bear.jpg" class="bear-image" id="ucsd-cse" alt="Bear" width="480" height="270">
                 <figcaption class="dark-pink-text">Bear at UCSD CSE</figcaption>
             </figure>
