--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div>
                     <details>
                         <summary class="dark-pink-text">Proficient</summary>
-                        <ul>
+                        <ul class="flexbox">
                             <li>Java, C, C++, Python, JavaScript, TypeScript</li>
                             <li>HTML, CSS</li>
                             <li>ReactJS, React Native</li>
@@ -291,7 +291,7 @@
                 <div>
                     <details>
                         <summary class="dark-pink-text">Familiar</summary>
-                        <ul>
+                        <ul class="flexbox">
                             <li>macOS, Windows, Linux</li>
                             <li>Node.js, Express</li>
                             <li>Assembly (ARM)</li>
